--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <h1>Disney Characters</h1>
+        <h1><a class="logo" href="index.html">Disney Characters</a></h1>
         <nav>
             <ul>
-                <li><a href="/contact.html">Contact</a></li>
-                <li><a href="/details.html">Details</a></li>
+                <li><a class="link" href="contact.html">Contact</a></li>
+                <li><a class="link" href="details.html">Details</a></li>
             </ul>
         </nav>
     </header>
