--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <script src="/index.js"></script>
 </body>
 </html>
 <script link rel="index.js"></script>
