--- a/html/details.html
+++ b/html/details.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Javascript course assignment</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="data:;base64,=" />
 </head>
 <body>
+    <header>
+        <h1 class ="hlogo"><a class="logo" href="index.html">Disney Characters</a></h1>
+        <nav>
+            <ul>
+                <li><a class="link" href="contact.html">Contact</a></li>
+                <li><a class="link" href="details.html">Details</a></li>
+            </ul>
+        </nav>
+    </header>
+   <div class="container"></div>
     
-    <script src="/index.js"></script>
+    <script src="/js/details.js"></script>
 </body>
 </html>
-<script link rel="index.js"></script>
