--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript course assignment</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="icon" href="data:;base64,=" />
 </head>
 <body>
     <header>
-        <h1><a class="logo" href="index.html">Disney Characters</a></h1>
+        <h2 class ="hlogo"><a class="logo" href="index.html">Disney Characters</a></h2>
         <nav>
             <ul>
                 <li><a class="link" href="contact.html">Contact</a></li>
@@ -20,9 +20,6 @@
     </header>
    <div id="app"></div>
     
-    <div class="results">
-        <div class="loader"></div>
-    </div>
-    <script src="/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
